resolved marker not showing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,3 +27,9 @@ body,
 ::-webkit-scrollbar-track:hover {
   background: #21295c;
 }
+
+
+.gm-style .gm-style-iw-c {
+  visibility: visible !important;
+  color: #333 !important;
+}
